grid width on desktop decreased to stop stretching

--- a/SCSS/Components/_grid.scss
+++ b/SCSS/Components/_grid.scss
@@ -56,7 +56,7 @@
     }
 
     @include tablet {
-      max-width: 800px;
+      max-width: 700px;
     }
 
 
